K8S/api.yaml
kind: Pod
apiVersion: v1
metadata:
  name: tt-api-app
  labels:
    app: tt-api
spec:
  containers:
    - name: tt-api-app
      image: grypr/tt-dockerk8s

---

kind: Service
apiVersion: v1
metadata:
  name: tt-api-service
spec:
  selector:
    app: tt-api
  ports:
    - port: 8000 # Default port for image
